--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "gatsby-source-filesystem": "^3.8.0",
     "gatsby-source-sanity": "^7.0.7",
     "gatsby-transformer-sharp": "^3.8.0",
+    "get-youtube-id": "^1.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-youtube": "^7.13.1",
     "styled-components": "^5.3.0"
   }
 }
