--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@sanity/block-content-to-react": "^3.0.0",
+    "@sanity/client": "^2.11.0",
     "babel-plugin-styled-components": "^1.13.1",
     "gatsby": "^3.8.1",
     "gatsby-plugin-image": "^1.8.0",
@@ -26,6 +28,7 @@
     "get-youtube-id": "^1.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-use-promise": "^0.3.1",
     "react-youtube": "^7.13.1",
     "styled-components": "^5.3.0"
   }
