--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sanity/client": "^2.11.0",
     "babel-plugin-styled-components": "^1.13.1",
     "gatsby": "^3.8.1",
+    "gatsby-plugin-global-context": "^1.0.0",
     "gatsby-plugin-image": "^1.8.0",
     "gatsby-plugin-sharp": "^3.8.0",
     "gatsby-plugin-styled-components": "^4.8.0",
@@ -26,6 +27,7 @@
     "gatsby-source-sanity": "^7.0.7",
     "gatsby-transformer-sharp": "^3.8.0",
     "get-youtube-id": "^1.0.1",
+    "luxon": "^1.27.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-use-promise": "^0.3.1",
