--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^2.11.0",
+    "@sanity/image-url": "^0.140.22",
     "babel-plugin-styled-components": "^1.13.1",
     "gatsby": "^3.8.1",
     "gatsby-plugin-global-context": "^1.0.0",
