--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gallushirundo-frontend",
   "version": "1.0.0",
   "private": true,
-  "description": "gallushirundo-frontend",
+  "description": "Gallus & Hirundo Gatsby frontend",
   "author": "Richárd Németh",
   "keywords": [
     "gatsby"
