--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "luxon": "^1.27.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-use-promise": "^0.3.1",
     "react-youtube": "^7.13.1",
     "styled-components": "^5.3.0"
