--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@sanity/client": "^2.11.0",
     "@sanity/image-url": "^0.140.22",
     "babel-plugin-styled-components": "^1.13.1",
+    "dotenv": "^10.0.0",
     "gatsby": "^3.8.1",
     "gatsby-plugin-global-context": "^1.0.0",
     "gatsby-plugin-image": "^1.8.0",
+    "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-sharp": "^3.8.0",
     "gatsby-plugin-styled-components": "^4.8.0",
     "gatsby-source-filesystem": "^3.8.0",
