--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^2.11.0",
     "@sanity/image-url": "^0.140.22",
+    "@slixites/gatsby-plugin-google-fonts": "^1.1.1",
     "babel-plugin-styled-components": "^1.13.1",
     "dotenv": "^10.0.0",
     "gatsby": "^3.8.1",
@@ -31,6 +32,7 @@
     "gatsby-source-sanity": "^7.0.7",
     "gatsby-transformer-sharp": "^3.8.0",
     "get-youtube-id": "^1.0.1",
+    "intersection-observer": "^0.12.0",
     "luxon": "^1.27.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
