--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "react-masonry-component": "^6.3.0",
     "react-use-promise": "^0.3.1",
     "react-youtube": "^7.13.1",
     "styled-components": "^5.3.0"
