--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-masonry-component": "^6.3.0",
+    "react-player": "^2.9.0",
     "react-use-promise": "^0.3.1",
     "react-youtube": "^7.13.1",
     "styled-components": "^5.3.0"
