--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-icons": "^4.2.0",
     "react-masonry-component": "^6.3.0",
     "react-player": "^2.9.0",
+    "react-use": "^17.2.4",
     "react-use-promise": "^0.3.1",
     "react-youtube": "^7.13.1",
     "styled-components": "^5.3.0"
