--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-use": "^17.2.4",
     "react-use-promise": "^0.3.1",
     "react-youtube": "^7.13.1",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "swiper": "^6.8.3"
   }
 }
