--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "gatsby-plugin-global-context": "^1.0.0",
     "gatsby-plugin-image": "^1.8.0",
     "gatsby-plugin-mailchimp": "^5.2.2",
+    "gatsby-plugin-manifest": "^3.14.0",
     "gatsby-plugin-react-helmet": "^4.12.0",
     "gatsby-plugin-sanity-image": "^0.6.0",
     "gatsby-plugin-sharp": "^3.8.0",
+    "gatsby-plugin-sitemap": "^4.10.0",
     "gatsby-plugin-styled-components": "^4.8.0",
     "gatsby-source-filesystem": "^3.8.0",
     "gatsby-source-sanity": "^7.0.7",
@@ -45,6 +47,7 @@
     "react-use": "^17.2.4",
     "react-use-promise": "^0.3.1",
     "react-youtube": "^7.13.1",
+    "sharp": "^0.29.1",
     "styled-components": "^5.3.0",
     "swiper": "^6.8.3"
   }
