--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sanity/client": "^2.11.0",
     "@sanity/image-url": "^0.140.22",
     "@slixites/gatsby-plugin-google-fonts": "^1.1.1",
+    "@tippyjs/react": "^4.2.5",
     "babel-plugin-styled-components": "^1.13.1",
     "dotenv": "^10.0.0",
     "gatsby": "^3.8.1",
