--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "gatsby-plugin-image": "^1.8.0",
     "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-manifest": "^3.14.0",
-    "gatsby-plugin-offline": "^4.14.0",
     "gatsby-plugin-react-helmet": "^4.12.0",
+    "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sanity-image": "^0.6.0",
     "gatsby-plugin-sharp": "^3.8.0",
     "gatsby-plugin-sitemap": "^4.10.0",
